--- a/Sources/Plancrow/views/screens/01_welcome_page.jade
+++ b/Sources/Plancrow/views/screens/01_welcome_page.jade
@@ -1,6 +1,6 @@
 extends ../anon_layout
 
 block au_content
-    div.row-fluid
-        div.span12
-            h1 not started
+    div.row
+        div.col-lg-12
+            h1 implemented on index page
