--- a/Sources/Plancrow/views/screens/02_pricing_page.jade
+++ b/Sources/Plancrow/views/screens/02_pricing_page.jade
@@ -1,75 +1,74 @@
 extends ../anon_layout
 
 block au_content
-    div.row-fluid
-        div.span12
-            div.span12
-                table.table-bordered
-                    tbody
-                        tr
-                            td User Based
-                            td
-                                div
-                                    label Up to 5 users
-                                    label Free
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 10 users
-                                    label 10 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 50 users
-                                    label 40 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 100 users
-                                    label 200 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label More then 100 users
-                                    label +100 Eur/month per every 100 users
-                                    button.btn-small.btn-primary Enroll
-                        tr
-                            td Project Based
-                            td
-                                div
-                                    label 1 project
-                                    label Free
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 3 projects
-                                    label 20 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 15 projects
-                                    label 40 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label Up to 30 projects
-                                    label 200 Eur/month
-                                    button.btn-small.btn-primary Enroll
-                            td
-                                div
-                                    label 30+ projects
-                                    label +100 Eur/month per every 30 projects
-                                    button.btn-small.btn-primary Enroll
-            div.span6.offset2
-                table
+    div.row
+        div.col-lg-10.col-offset-1
+            table.table-bordered
+                tbody
                     tr
+                        td User Based
                         td
-                            form.form-horizontal
-                                label Free enrollment for public projects
-                                button.btn-small.btn-primary Public projects
+                            div
+                                label Up to 5 users
+                                label Free
+                                button.btn-small.btn-primary Enroll
                         td
-                            label -OR-
+                            div
+                                label Up to 10 users
+                                label 10 Eur/month
+                                button.btn-small.btn-primary Enroll
                         td
-                            form.form-horizontal
-                                label Try it for free
-                                button.btn-small.btn-primary Try it
+                            div
+                                label Up to 50 users
+                                label 40 Eur/month
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label Up to 100 users
+                                label 200 Eur/month
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label More then 100 users
+                                label +100 Eur/month per every 100 users
+                                button.btn-small.btn-primary Enroll
+                    tr
+                        td Project Based
+                        td
+                            div
+                                label 1 project
+                                label Free
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label Up to 3 projects
+                                label 20 Eur/month
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label Up to 15 projects
+                                label 40 Eur/month
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label Up to 30 projects
+                                label 200 Eur/month
+                                button.btn-small.btn-primary Enroll
+                        td
+                            div
+                                label 30+ projects
+                                label +100 Eur/month per every 30 projects
+                                button.btn-small.btn-primary Enroll
+        div.col-lg-4.col-offset-4
+            table
+                tr
+                    td
+                        form.form-horizontal
+                            label Free enrollment for public projects
+                            button.btn-small.btn-primary Public projects
+                    td
+                        label -OR-
+                    td
+                        form.form-horizontal
+                            label Try it for free
+                            button.btn-small.btn-primary Try it
