--- a/Sources/Plancrow/views/screens/10_project_creation.jade
+++ b/Sources/Plancrow/views/screens/10_project_creation.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span6.offset3
+    div.row
+        div.col-lg-6.col-offset-3
             h1 New project
             form.form-horizontal
                 fieldset
