--- a/Sources/Plancrow/views/screens/15_invoicing_for_project.jade
+++ b/Sources/Plancrow/views/screens/15_invoicing_for_project.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span6.offset3
+    div.row
+        div.col-lg-6.col-offset-3
             h3 Issue invoice for PROJECT
             form.form-horizontal
                 fieldset
@@ -34,5 +34,5 @@ block au_content
                     div.control-group
                         div.controls
                             button.btn(type='submit') Generate
-            label
+            br
             a(href="/pages/16_invoices_history") Invoices history
