--- a/Sources/Plancrow/views/screens/16_invoices_history.jade
+++ b/Sources/Plancrow/views/screens/16_invoices_history.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
+    div.row
+        div.col-lg-12
             h3 Invoices list for PROJECT
             table.table-bordered(width=400)
                 caption Invoices
