--- a/Sources/Plancrow/views/screens/18_reports_page.jade
+++ b/Sources/Plancrow/views/screens/18_reports_page.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span6.offset3
+    div.row
+        div.col-lg-6.col-offset-3
             h3 Select report
             form.form-horizontal
                 a(href="/pages/19_management_report_screen") Page 19: Management Report Screen
