--- a/Sources/Plancrow/views/screens/05_company_admin.jade
+++ b/Sources/Plancrow/views/screens/05_company_admin.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span6.offset3
+    div.row
+        div.col-lg-6.col-offset-3
             h3 Company settings
             form.form-horizontal
                 fieldset
