--- a/Sources/Plancrow/views/screens/07_user_list.jade
+++ b/Sources/Plancrow/views/screens/07_user_list.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
+    div.row
+        div.col-lg-12
             h3 Company users
             table.table-bordered
                 tbody
