--- a/Sources/Plancrow/views/screens/08_invitation.jade
+++ b/Sources/Plancrow/views/screens/08_invitation.jade
@@ -1,10 +1,10 @@
 extends ../anon_layout
 
 block au_content
-    div.row-fluid
-        div.span6.offset3
+    div.row
+        div.col-lg-6.col-offset-3
             h3 You are invited to use plancrow by MANAGER of COMPANY
-            label You can
+            label You can &nbsp;
             a(href="/pages/03_registration_page") Register
-            label or
+            label &nbsp; or &nbsp;
             a(href="/pages/04_sign_in_page") Use existing account
