--- a/Sources/Plancrow/views/screens/11_project_settings.jade
+++ b/Sources/Plancrow/views/screens/11_project_settings.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
+    div.row
+        div.col-lg-6.col-offset-3
             h1 Edit project settings
             form.form-horizontal
                 fieldset
