--- a/Sources/Plancrow/views/screens/17_invoice_saving.jade
+++ b/Sources/Plancrow/views/screens/17_invoice_saving.jade
@@ -1,6 +1,6 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
-            h1 not started
+    div.row
+        div.col-lg-12
+            h1 not required
