--- a/Sources/Plancrow/views/screens/19_management_report_screen.jade
+++ b/Sources/Plancrow/views/screens/19_management_report_screen.jade
@@ -1,8 +1,8 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
+    div.row
+        div.col-lg-12
             h3 Management reporting
             form.form-horizontal
                 fieldset
