--- a/Sources/Plancrow/views/screens/24_public_projects.jade
+++ b/Sources/Plancrow/views/screens/24_public_projects.jade
@@ -1,6 +1,6 @@
 extends ../authed_layout
 
 block au_content
-    div.row-fluid
-        div.span12
+    div.row
+        div.col-lg-12
             h1 not started
