--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -10,6 +10,8 @@ body {
     color: #333;
     font-size: 12px;
     line-height: 20px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 img {
