Addded scheme image

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -18,10 +18,10 @@ html
                 p.text-right.text-muted Private Alpha
                 .row
                     .w-col.col-lg-6
-                        img.responsive-img(src='/landing/images/mpp.jpg', width='452', alt='mpp.jpg')
+                        img.responsive-img(src='/landing/images/schema.jpg', width='452', alt='schema.jpg')
                     .w-col.col-lg-6.clearfix.content-column
                         .clearfix.icons
-                            img(src='/images/crow-logo.png', width='128px', height='128px', alt='crow-logo.png')
+                            img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
                         h3 Import MS Project ® files and manage your timesheets
                         .signinsignup#signup
                             button.signup.btn.btn-primary(href='#') Sign Up
