--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -22,8 +22,36 @@ img {
     vertical-align: middle;
 }
 
+#titlesection {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    /*background: red;*/
+    height: 100%;
+}
+
+
 .signinsignup {
     margin: 15px auto;
+}
+
+#signin input,
+#signin button.btn{
+    min-height: 20px;
+    width: 50%;
+}
+
+#signin .modal-footer{
+    text-align: center !important;
+}
+
+#signin input,
+#signin button.btn{
+    display: inline-block;
+    min-height: 20px;
+    width: 75%;
+    height: 40px;
+    padding: 5px;
+    font-size: 18px;
 }
 
 #signup button,
@@ -45,41 +73,51 @@ img {
     width: 100%;
 }
 
-.section {
-    width: auto;
+.bottomsignup{
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.footer{
     padding-top: 15px;
     padding-bottom: 15px;
 }
 
-.section.header {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color: #2e323d;
-}
+/*.section {*/
+    /*width: auto;*/
+    /*padding-top: 15px;*/
+    /*padding-bottom: 15px;*/
+/*}*/
 
-.section.hero {
-    padding-top: 55px;
-    padding-bottom: 0px;
-    background-color: #363b48;
-    text-align: center;
-}
+/*.section.header {*/
+    /*padding-top: 25px;*/
+    /*padding-bottom: 25px;*/
+    /*background-color: #2e323d;*/
+/*}*/
 
-.section.grey {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: center;
-}
+/*.section.hero {*/
+    /*padding-top: 55px;*/
+    /*padding-bottom: 0px;*/
+    /*background-color: #363b48;*/
+    /*text-align: center;*/
+/*}*/
 
-.section.centered {
-    background-color: #3ff;
-    text-align: center;
-}
+/*.section.grey {*/
+    /*padding-top: 5px;*/
+    /*padding-bottom: 5px;*/
+    /*text-align: center;*/
+/*}*/
 
-.section.footer {
-    padding-top: 10px;
-    padding-bottom: 15px;
-    text-align: center;
-}
+/*.section.centered {*/
+    /*background-color: #3ff;*/
+    /*text-align: center;*/
+/*}*/
+
+/*.section.footer {*/
+    /*padding-top: 10px;*/
+    /*padding-bottom: 15px;*/
+    /*text-align: center;*/
+/*}*/
 
 .responsive-img {
     display: block;
@@ -135,6 +173,11 @@ img {
 
 .featuretext h2 {
     padding: 15px 0;
+}
+
+.featuretext h4{
+    font-size: 21px;
+    font-weight: 200;
 }
 
 @media (max-width: 991px) {
