--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -13,94 +13,91 @@ html
         //link(rel='icon', type='image/x-icon', href='https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico')
         //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
-        .section#landingmain
-            .container
-                p.text-right.text-muted Private Alpha
-                .row
-                    .w-col.col-lg-6
-                        img.responsive-img(src='/landing/images/schema.jpg', width='452', alt='schema.jpg')
-                    .w-col.col-lg-6.clearfix.content-column
-                        .clearfix.icons
-                            img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
-                        h3 Import MS Project ® files and manage your timesheets
-                        .signinsignup#signup
-                            button.signup.btn.btn-primary(href='#') Sign Up
-                        .signinsignup
-                            span or&nbsp;
-                                a(href='#') Sign In
-                .row.moreinfo
-                    .col-lg-12
-                        a(href='#') More info&nbsp;
-                            i.icon-chevron-down
-        .separator
-        .clearfix.section#detailed
-            .container
-                article.row
-                    .col-offset-1.col-lg-5.clearfix
-                        .clearfix.featuretext
-                            h2 Import MPP
-                            h4 Import Microsof project files of any version
-                            h4 Load data about tasks structure, schedule, resources & effort estimates
-                            h4 View project data online
-                            h4 Map resources from MPP to your project team
-                            h4 Reload files multiple time without loosing anything (changes are merged)
-                    .col-lg-5.clearfix
-                        .featureimage
-                            img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
-        .clearfix.section
-            .container
-                article.row
-                    .col-offset-1.col-lg-5.clearfix
-                        .clearfix.featureimage
-                            img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
-                    .col-lg-5.clearfix
-                        .featuretext
-                            h2 Track time
-                            h4 Entering spent hours information is easier & faster then ever
-                            h4 No need to select task manually
-                            h4 System will identify tasks assigned to you and scheduled for current week
-                            h4 System will show you any other tasks you entered your time in lately
-        .clearfix.section
-            .container
-                article.row
-                    .col-offset-1.col-lg-5.clearfix
-                        .clearfix.featuretext
-                            h2 Analyze reports
-                            h4 Overall chart for management
-                            h4 Project charts for project managers
-                            h4 Analysis of spent time per person
-                            h4 Exports to MS Excel and other tools
-                    .col-lg-5.clearfix
-                        .clearfix.featureimage
-                            img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
-            .clearfix.section
-                .container
-                    article.row
-                        .col-offset-1.col-lg-5.clearfix
-                            .clearfix.featureimage
-                                img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
-                        .col-lg-5.clearfix
-                            .featuretext
-                                h2 1 for free&nbsp;&#151;&nbsp;
-                                    i.icon-euro
-                                    | 20 for all
-                                h4 Unlimited users
-                                h4 1 project free
-                                h4 Unlimited projects and&nbsp;
-                                    i.icon-euro
-                                    | 20/month
-            .bottomsignup
-                .contaner
-                    .row
-                        .col-offset-4.col-lg-4
-                            button.signup.btn.btn-large.btn-primary(href='#') Sign Up
-        .section.footer
-            .container
-                .row
-                    .col-offset-8.col-lg-2
-                        a(href='mailto:info@plancrow.com') Contact Us
-                    .col-lg-2
-                        div © Plancrow 2013
+        .container(style="height: 100%")
+            .row#titlesection
+                .col-lg-12(style="height: 100%")
+                    .row(style="height: 5%")
+                        p.text-right.text-muted Private Alpha
+                    .row(style="height: 90%")
+                        .col-lg-6
+                            img.responsive-img(src='/landing/images/schema.jpg', width='452', alt='schema.jpg')
+                            #one_import(style="opacity: 0")
+                                | 1. Import
+                            #two_enter(style="opacity: 0")
+                                | 2. Enter
+                            #three_analyze(style="opacity: 0")
+                                | 3. Analyze
+                        .col-lg-6.clearfix.content-column
+                            .clearfix.icons
+                                img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
+                            h3 Import MS Project ® files and manage your timesheets
+                            .signinsignup#signup
+                                button.signup.btn.btn-primary(href='#') Sign Up
+                            .signinsignup#signin
+                                span or&nbsp;
+                                    a.signin(href='#') Sign In
+                    .row.moreinfo(style="height: 5%")
+                        .col-lg-12
+                            a(href='#') More info&nbsp;
+                                i.icon-chevron-down
+        .separator.clearfix
+        .container(style="height: 100%")
+            article.row#importmpp
+                .col-offset-1.col-lg-5.clearfix
+                    .clearfix.featuretext
+                        h2 Import MPP
+                        h4 Import Microsof project files of any version
+                        h4 Load data about tasks structure, schedule, resources & effort estimates
+                        h4 View project data online
+                        h4 Map resources from MPP to your project team
+                        h4 Reload files multiple time without loosing anything (changes are merged)
+                .col-lg-5.clearfix
+                    .featureimage
+                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+            article.row
+                .col-offset-1.col-lg-5.clearfix
+                    .clearfix.featureimage
+                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+                .col-lg-5.clearfix
+                    .featuretext
+                        h2 Track time
+                        h4 Entering spent hours information is easier & faster then ever
+                        h4 No need to select task manually
+                        h4 System will identify tasks assigned to you and scheduled for current week
+                        h4 System will show you any other tasks you entered your time in lately
+            article.row
+                .col-offset-1.col-lg-5.clearfix
+                    .clearfix.featuretext
+                        h2 Analyze reports
+                        h4 Overall chart for management
+                        h4 Project charts for project managers
+                        h4 Analysis of spent time per person
+                        h4 Exports to MS Excel and other tools
+                .col-lg-5.clearfix
+                    .clearfix.featureimage
+                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+            article.row
+                .col-offset-1.col-lg-5.clearfix
+                    .clearfix.featureimage
+                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+                .col-lg-5.clearfix
+                    .featuretext
+                        h2 1 for free&nbsp;&#151;&nbsp;
+                            i.icon-euro
+                            | 20 for all
+                        h4 Unlimited users
+                        h4 1 project free
+                        h4 Unlimited projects and&nbsp;
+                            i.icon-euro
+                            | 20/month
+            .bottomsignup.row
+                .col-offset-4.col-lg-4
+                    button.signup.btn.btn-large.btn-primary(href='#') Sign Up
+            .footer.row
+                .col-offset-8.col-lg-2
+                    a(href='mailto:info@plancrow.com') Contact Us
+                .col-lg-2
+                    div © Plancrow 2013
 
     //shim dependencies
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
