Two more visuals

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -57,7 +57,7 @@ html
             article.row
                 .col-offset-1.col-lg-5.clearfix
                     .clearfix.featureimage
-                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+                        img(src='/landing/images/track.jpg', alt='track.jpg')
                 .col-lg-5.clearfix
                     .featuretext
                         h2 Track time
@@ -79,7 +79,7 @@ html
             article.row
                 .col-offset-1.col-lg-5.clearfix
                     .clearfix.featureimage
-                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+                        img(src='/landing/images/piggybank.png', alt='piggybank.png')
                 .col-lg-5.clearfix
                     .featuretext
                         h2 1 for free&nbsp;&#151;&nbsp;
