--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -20,13 +20,16 @@ html
                         p.text-right.text-muted Private Alpha
                     .row(style="height: 90%")
                         .col-lg-6
-                            img.responsive-img(src='/landing/images/schema.jpg', width='452', alt='schema.jpg')
-                            #one_import(style="opacity: 0")
-                                | 1. Import
-                            #two_enter(style="opacity: 0")
-                                | 2. Enter
-                            #three_analyze(style="opacity: 0")
-                                | 3. Analyze
+                            #triptih
+                                #t1import
+                                    #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsof project files of any version. Learn more…")
+                                        | 1. Import project
+                                #t2tracktime
+                                    #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. Learn more…")
+                                        | 2. Enter hours
+                                #t3content
+                                    #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. Learn more…")
+                                        | 3. Analyze
                         .col-lg-6.clearfix.content-column
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
