Fixes #110 : Scrolls to proper images on button clicks

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -23,13 +23,13 @@ html
                             #triptih
                                 #t1import
                                     #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsof project files of any version. Learn more…")
-                                        | 1. Import project
+                                        | 1. Import MPP
                                 #t2tracktime
                                     #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. Learn more…")
-                                        | 2. Enter hours
+                                        | 2. Track time
                                 #t3content
                                     #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. Learn more…")
-                                        | 3. Analyze
+                                        | 3. Analyze reports
                         .col-lg-6.clearfix.content-column
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
@@ -57,7 +57,7 @@ html
                 .col-lg-5.clearfix
                     .featureimage
                         img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
-            article.row
+            article.row#tracktime
                 .col-offset-1.col-lg-5.clearfix
                     .clearfix.featureimage
                         img(src='/landing/images/track.jpg', alt='track.jpg')
@@ -68,7 +68,7 @@ html
                         h4 No need to select task manually
                         h4 System will identify tasks assigned to you and scheduled for current week
                         h4 System will show you any other tasks you entered your time in lately
-            article.row
+            article.row#analyze
                 .col-offset-1.col-lg-5.clearfix
                     .clearfix.featuretext
                         h2 Analyze reports
