Wired off other pages

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -90,7 +90,7 @@ html
                             | 20 for all
                         h4 Unlimited users
                         h4 1 project free
-                        h4 Unlimited projects and&nbsp;
+                        h4 Unlimited projects at&nbsp;
                             i.icon-euro
                             | 20/month
             .bottomsignup.row
