Fixes #118 Suggestion: plancrow as website name

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -2,7 +2,7 @@
 html
     head
         meta(charset='utf-8')
-        title plncrw
+        title Plancrow
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', type='text/css', href='/landing/css/normalize.css')
@@ -10,7 +10,7 @@ html
         link(rel='stylesheet', type='text/css', href='/landing/css/plncrw.webflow.css')
         link(rel='stylesheet', href='/scripts/vendor/font-awesome/css/font-awesome.min.css')
         link(rel='stylesheet', href='/scripts/vendor/flat-ui-official/css/flat-ui.css')
-        //link(rel='icon', type='image/x-icon', href='https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico')
+        link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
         //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
         .container(style="height: 100%")
@@ -78,7 +78,7 @@ html
                         h4 Exports to MS Excel and other tools
                 .col-lg-5.clearfix
                     .clearfix.featureimage
-                        img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
+                        img(src='/landing/images/analyze.jpg', alt='analyze.jpg')
             article.row
                 .col-offset-1.col-lg-5.clearfix
                     .clearfix.featureimage
