--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -69,21 +69,21 @@ html
                         h4 System will identify tasks assigned to you and scheduled for current week
                         h4 System will show you any other tasks you entered your time in lately
             article.row#analyze
-                .col-offset-1.col-lg-5.clearfix
+                .col-offset-2.col-lg-4.clearfix
                     .clearfix.featuretext
                         h2 Analyze reports
                         h4 Overall chart for management
                         h4 Project charts for project managers
                         h4 Analysis of spent time per person
                         h4 Exports to MS Excel and other tools
-                .col-lg-5.clearfix
+                .col-lg-4.clearfix
                     .clearfix.featureimage
                         img(src='/landing/images/analyze.jpg', alt='analyze.jpg')
             article.row
-                .col-offset-1.col-lg-5.clearfix
+                .col-offset-2.col-lg-4.clearfix
                     .clearfix.featureimage
                         img(src='/landing/images/piggybank.png', alt='piggybank.png')
-                .col-lg-5.clearfix
+                .col-lg-4.clearfix
                     .featuretext
                         h2 1 for free&nbsp;&#151;&nbsp;
                             i.icon-euro
@@ -93,14 +93,13 @@ html
                         h4 Unlimited projects at&nbsp;
                             i.icon-euro
                             | 20/month
-            .bottomsignup.row
-                .col-offset-4.col-lg-4
-                    button.signup.btn.btn-large.btn-primary(href='#') Sign Up
+                    .bottomsignup
+                        button.signup.btn.btn-large.btn-primary(href='#') Sign Up
             .footer.row
-                .col-offset-8.col-lg-2
-                    a(href='mailto:info@plancrow.com') Contact Us
                 .col-lg-2
                     div © Plancrow 2013
+                .col-offset-8.col-lg-2
+                    a(href='mailto:info@plancrow.com') Contact Us
 
     //shim dependencies
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
