--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -17,7 +17,7 @@ html
             .row#titlesection
                 .col-lg-12(style="height: 100%")
                     .row(style="height: 5%")
-                        p.text-right.text-muted Private Alpha #{currency}
+                        p.text-right.text-muted Private Alpha
                     .row(style="height: 90%")
                         .col-lg-6
                             #triptih
