--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -13,12 +13,12 @@ html
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
         //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
-        .container(style="height: 100%")
+        .container
             .row#titlesection
-                .col-lg-12(style="height: 100%")
-                    .row(style="height: 5%")
+                .col-lg-12
+                    .row
                         p.text-right.text-muted Private Alpha
-                    .row(style="height: 90%")
+                    .row
                         .col-lg-6
                             #triptih
                                 #t1import
@@ -43,10 +43,10 @@ html
                         .col-lg-12
                             a(href='#') More info&nbsp;
                                 i.icon-chevron-down
-        .separator.clearfix
-        .container(style="height: 100%")
+                    .row
+                        hr
             article.row#importmpp
-                .col-offset-1.col-lg-5.clearfix
+                .col-12.col-sm-6.col-offset-1.col-lg-5.clearfix
                     .clearfix.featuretext
                         h2 Import MPP
                         h4 Import Microsof project files of any version
@@ -54,14 +54,14 @@ html
                         h4 View project data online
                         h4 Map resources from MPP to your project team
                         h4 Reload files multiple time without loosing anything (changes are merged)
-                .col-lg-5.clearfix
+                .col-sm-6.col-lg-5.hidden-sm.clearfix
                     .featureimage
                         img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
             article.row#tracktime
-                .col-offset-1.col-lg-5.clearfix
+                .hidden-sm.col-sm-6.col-offset-1.col-lg-5.clearfix
                     .clearfix.featureimage
                         img(src='/landing/images/track.jpg', alt='track.jpg')
-                .col-lg-5.clearfix
+                .col-12.col-sm-6.col-lg-5.clearfix
                     .featuretext
                         h2 Track time
                         h4 Entering spent hours information is easier & faster then ever
@@ -69,21 +69,21 @@ html
                         h4 System will identify tasks assigned to you and scheduled for current week
                         h4 System will show you any other tasks you entered your time in lately
             article.row#analyze
-                .col-offset-2.col-lg-4.clearfix
+                .col-12.col-sm-6.col-offset-2.col-lg-4.clearfix
                     .clearfix.featuretext
                         h2 Analyze reports
                         h4 Overall chart for management
                         h4 Project charts for project managers
                         h4 Analysis of spent time per person
                         h4 Exports to MS Excel and other tools
-                .col-lg-4.clearfix
+                .hidden-sm.col-sm-6.col-lg-4.hidden-sm.clearfix
                     .clearfix.featureimage
                         img(src='/landing/images/analyze.jpg', alt='analyze.jpg')
             article.row
-                .col-offset-2.col-lg-4.clearfix
-                    .clearfix.featureimage
+                .hidden-sm.col-sm-6.col-offset-2.col-lg-4.clearfix
+                    .clearfix.hidden-sm.featureimage
                         img(src='/landing/images/piggybank.png', alt='piggybank.png')
-                .col-lg-4.clearfix
+                .col-12.col-sm-6.col-lg-4.clearfix
                     .featuretext
                         h2 1 for free&nbsp;&#151;&nbsp;
                             - if (currency === "EUR") {
@@ -110,10 +110,10 @@ html
                     .bottomsignup
                         button.signup.btn.btn-large.btn-primary(href='#') Sign Up
             .footer.row
-                .col-lg-2
-                    div © Plancrow 2013
-                .col-offset-8.col-lg-2
+                .col-6.text-left
                     a(href='mailto:info@plancrow.com') Contact Us
+                .col-6.text-right
+                    | © Plancrow 2013
 
     //shim dependencies
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
