Fixes #120 Setup a page with a number of current registrations

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -30,7 +30,7 @@ html
                                 #t3content
                                     #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. Learn more…")
                                         | 3. Analyze reports
-                        .col-lg-6.clearfix.content-column
+                        .col-lg-6.clearfix.content-column#signupsection
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
                             h3 Import MS Project ® files and manage your timesheets
