--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -14,6 +14,17 @@ body {
     overflow-x: hidden;
 }
 
+::selection{
+    background: rgba(255, 20, 147, 0.75);
+    color: #FFFFFF;
+    opacity: 0.05;
+}
+::-moz-selection{  /* Firefox */
+    background: rgba(255, 20, 147, 0.75);
+    color: #FFFFFF;
+    opacity: 0.05
+}
+
 img {
     display: inline-block;
     width: auto;
