--- a/Sources/Plancrow/views/stat.jade
+++ b/Sources/Plancrow/views/stat.jade
@@ -7,6 +7,7 @@ html(style="height: 100%")
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', type='text/css', href='/landing/css/normalize.css')
         link(rel='stylesheet', href='/scripts/vendor/bootstrap/dist/css/bootstrap.min.css')
+        link(rel='stylesheet', type='text/css', href='/landing/css/plncrw.webflow.css')
         link(rel='stylesheet', href='/scripts/vendor/font-awesome/css/font-awesome.min.css')
         link(rel='stylesheet', href='/scripts/vendor/flat-ui-official/css/flat-ui.css')
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
