Optimized and bundled all css in a single file for landing page

--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -42,7 +42,7 @@ img {
 
 
 #triptih{
-    background: url("../images/schema.jpg");
+    background: url("../../landing/images/schema.jpg");
     background-size: 100% 100%;
     margin: auto;
     width: 550px;
