--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -5,11 +5,8 @@ html
         title Plancrow
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        link(rel='stylesheet', type='text/css', href='/landing/css/normalize.css')
-        link(rel='stylesheet', href='/scripts/vendor/bootstrap/dist/css/bootstrap.min.css')
-        link(rel='stylesheet', type='text/css', href='/landing/css/plncrw.webflow.css')
-        link(rel='stylesheet', href='/scripts/vendor/font-awesome/css/font-awesome.min.css')
-        link(rel='stylesheet', href='/scripts/vendor/flat-ui-official/css/flat-ui.css')
+        //link(rel='stylesheet', type='text/css', href='/landing/main.css')
+        link(rel='stylesheet', type='text/css', href='/landing.min.css')
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
         //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
