--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -116,5 +116,6 @@ html
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
     script(type='text/javascript', src='/scripts/jade-hack/jade-shim.js')
     //main requirejs module
+    //script(data-main='/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
     script(data-main='/scripts/client/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
     script(type='text/javascript', src='/landing/js/ga.js')
