Fixes #123 Main title format question

--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -70,6 +70,14 @@ img {
     clear:both;
 }
 
+span.amp {
+    font-family: Baskerville, Palatino, "Book Antiqua", serif;
+    font-style: italic;
+    font-size: 45px;
+    /*padding-top: 4px;*/
+    /*display: inline-block;*/
+}
+
 .signinsignup {
     margin: 15px auto;
 }
