--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -5,8 +5,8 @@ html
         title Plancrow
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        //link(rel='stylesheet', type='text/css', href='/landing/main.css')
-        link(rel='stylesheet', type='text/css', href='/landing.min.css')
+        link(rel='stylesheet', type='text/css', href='/landing/main.css')
+        //link(rel='stylesheet', type='text/css', href='/landing.min.css')
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
         //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
@@ -30,7 +30,9 @@ html
                         .col-lg-6.clearfix.content-column#signupsection
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
-                            h3 Import MS Project ® files and manage your timesheets
+                            h2 Import MS Project ® files
+                            span.amp &amp;
+                            h3 manage your timesheets
                             .signinsignup#signup
                                 button.signup.btn.btn-primary(href='#') Sign Up
                             .signinsignup#signin
