Fixes #127 Privacy&Terms is missing

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -31,7 +31,7 @@ html
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
                             h2 Import MS Project ® files
-                            span.amp &amp;
+                            span.big.amp &amp;
                             h3 manage your timesheets
                             .signinsignup#signup
                                 button.signup.btn.btn-primary(href='#') Sign Up
@@ -117,8 +117,11 @@ html
                     .bottomsignup
                         button.signup.btn.btn-large.btn-primary(href='#') Sign Up
             .footer.row
-                .col-6.text-left
+                .col-6.text-left.bottom-menu
                     a(href='mailto:info@plancrow.com') Contact Us
+                    a(href='/terms') Terms&nbsp;
+                        span.amp &amp;&nbsp;
+                        | privacy
                 .col-6.text-right
                     | © Plancrow 2013
 
