--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -70,12 +70,13 @@ img {
     clear:both;
 }
 
+.big {
+    font-size: 45px;
+}
+
 span.amp {
     font-family: Baskerville, Palatino, "Book Antiqua", serif;
     font-style: italic;
-    font-size: 45px;
-    /*padding-top: 4px;*/
-    /*display: inline-block;*/
 }
 
 .signinsignup {
@@ -126,42 +127,6 @@ span.amp {
     padding-bottom: 15px;
 }
 
-/*.section {*/
-    /*width: auto;*/
-    /*padding-top: 15px;*/
-    /*padding-bottom: 15px;*/
-/*}*/
-
-/*.section.header {*/
-    /*padding-top: 25px;*/
-    /*padding-bottom: 25px;*/
-    /*background-color: #2e323d;*/
-/*}*/
-
-/*.section.hero {*/
-    /*padding-top: 55px;*/
-    /*padding-bottom: 0px;*/
-    /*background-color: #363b48;*/
-    /*text-align: center;*/
-/*}*/
-
-/*.section.grey {*/
-    /*padding-top: 5px;*/
-    /*padding-bottom: 5px;*/
-    /*text-align: center;*/
-/*}*/
-
-/*.section.centered {*/
-    /*background-color: #3ff;*/
-    /*text-align: center;*/
-/*}*/
-
-/*.section.footer {*/
-    /*padding-top: 10px;*/
-    /*padding-bottom: 15px;*/
-    /*text-align: center;*/
-/*}*/
-
 .responsive-img {
     display: block;
     margin-right: auto;
@@ -204,6 +169,11 @@ span.amp {
 
 .moreinfo {
     text-align: center;
+}
+
+.bottom-menu a{
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .bottomsignup {
